Create a notebook to read stream with autoloader

--- a/Streaming Simulator Notebook.ipynb
+++ b/Streaming Simulator Notebook.ipynb
@@ -5,7 +5,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "3f27c322-393c-4601-a207-53380f54bd2e",
      "showTitle": false,
