Create watermarking notebook

--- a/Reading Streams with AutoLoader.ipynb
+++ b/Reading Streams with AutoLoader.ipynb
@@ -26,6 +26,7 @@
     "    format(\"cloudFiles\").\\\n",
     "    option(\"cloudFiles.format\", \"csv\").\\\n",
     "    option(\"cloudFiles.schemaLocation\", schema_location).\\\n",
+    "    option(\"cloudFiles.schemaEvolutionMode\", \"none\")\n",
     "    load(source_path)"
    ]
   },
