Create a notebook for writing streams

--- a/Watermarking.ipynb
+++ b/Watermarking.ipynb
@@ -5,7 +5,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "7418171f-8131-4ac6-879f-66a26057072e",
      "showTitle": false,
@@ -24,7 +27,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "d068fba3-6396-4251-bf85-f08416f5063b",
      "showTitle": false,
@@ -38,6 +44,9 @@
     "\n",
     "schema_location = \"/Volumes/streaming_demo/weather_stream/weather_stream_volume/source/schemas/_live_weather_schema\"\n",
     "\n",
+    "# Define schema explicitly because CSV files store timestamps as strings.\n",
+    "# Without specifying TimestampType, Spark would read them as strings,\n",
+    "# causing issues with time-based operations in streaming.\n",
     "schema = StructType([\n",
     "    StructField(\"event_id\", StringType()),\n",
     "    StructField(\"timestamp\", TimestampType()),\n",
@@ -60,11 +69,21 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "24d1f47c-ab7a-4440-a257-4cb5c196f201",
      "showTitle": false,
-     "tableResultSettingsMap": {},
+     "tableResultSettingsMap": {
+      "0": {
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{\"window\":393},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1766062197593}",
+       "filterBlob": null,
+       "queryPlanFiltersBlob": null,
+       "tableResultIndex": 0
+      }
+     },
      "title": ""
     }
    },
