Create notebook for trigger intervals

--- a/Writing Streams.ipynb
+++ b/Writing Streams.ipynb
@@ -5,7 +5,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "022071da-fdc6-416a-ae39-b1e104996551",
      "showTitle": false,
@@ -34,7 +37,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "2f87b001-6d77-443f-93d7-16cbd9481e4c",
      "showTitle": false,
